--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,9 @@ dependencies {
     //EditProfile dependencies
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    //Stories dependencies
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
 }
 
