--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Instagram"
         tools:targetApi="31">
+
+        <activity
+            android:name=".StoriesActivity"
+            android:exported="false"/>
         <activity
             android:name=".FollowingActivity"
             android:exported="false" />
