--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:22.1.2'
     implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.firebase:firebase-storage:20.2.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.hendraanggrian.appcompat:socialview-autocomplete:0.1'
-    implementation "com.google.android.material:material:1.9.0"
+
+    //Choose image from library
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 
     //EditProfile dependencies
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -60,5 +64,6 @@ dependencies {
     //Stories dependencies
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.shts:StoriesProgressView:3.0.0'
+
 }
 
