--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     //Stories dependencies
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.shts:StoriesProgressView:3.0.0'
+    implementation 'com.github.pwittchen:swipe-rx2:0.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 }
 
